--- a/home.html
+++ b/home.html
@@ -185,7 +185,7 @@
         </nav>
         <div class="auth-links">
             <a href="login.html">Sign in</a>
-            <a href="#">Get started</a>
+            <a href="register.html">Get started</a>
         </div>
     </header>
 
@@ -205,6 +205,21 @@
         </div>
     </div>
  
+
+
+     <nav class="navbar">
+        <a href="index.html">Home</a>
+        <a href="login.html">Login</a>
+        <a href="register.html">Register</a>
+    </nav>
+    <div class="container">
+        <h1>Welcome to Airspace</h1>
+        
+        <a href="login.html" >Login</a>
+        <a href="register.html" >Register</a>
+
+
+
     <footer>
         <a href="#">Help</a>
         <a href="#">Status</a>
